<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Doctor_Profile">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:orientation="vertical"
            android:background="#38819e"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#388"
            android:orientation="vertical">


            <TextView
                style="@style/Base.TextAppearance.AppCompat.Display4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/doctor_profile"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/fill_below_details"
                android:textColor="#fff"
                android:textSize="17sp"
                android:textStyle="italic" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:orientation="vertical"
                android:background="#38819e"/>
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/m_pro_image"
                    android:layout_width="150dp"
                    android:layout_height="130dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:scaleType="centerCrop"
                    android:background="@drawable/doctor"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/tap_to_choose_image" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="350dp"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/m_full_name"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/email"
                        android:textColor="#000000"
                        android:inputType="text"
                        android:maxLines="1"
                        tools:targetApi="lollipop" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="350dp"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/m_gender"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/gender"
                        android:textColor="#000000"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="350dp"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/m_city"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/city"
                        android:textColor="#000000"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="350dp"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/m_cell_no"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/cell_number"
                        android:textColor="#000000"
                        android:inputType="number"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="350dp"
                    android:layout_height="wrap_content">

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_save_m_detail"
                    android:layout_gravity="center"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/button_style_blue"
                    android:drawableEnd="@drawable/ic_send_black_24dp"
                    android:text="@string/update"
                    android:textColor="#fff"
                    android:textSize="17sp" />


            </LinearLayout>
        </ScrollView>
    </LinearLayout>